# group_there

./: .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  activate  db_migration_plan.md  drizzle-intermediate.config.ts  drizzle.config.ts  eslint.config.mjs  heuristic-method.md  next.config.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
TODOs/: admin-solution-tools.md  dialogs.md  dist-mat-upper-bound.md  distances.md  efficient-subset-search.md  error-deleting.md  events-on-group-page.md  final-integration-summary.md  geocoding.md  integration-testing-workflow.md  location-visualization.md  optimistic_fake_tripper_updates.md  rework_metrics.md  snake_case_db.md  solution-persistence.md  solve-async-webhook-style.md  solver-refactor-complete.md
docs/: group_generator_mojo_python_interface_semantics.md  group_generator_mojo_semantics.md
scripts/shell/: curl_python_dev.sh  curl_python_solve.sh  docs_md_to_html.sh  test_google_routes_api.sh  test_google_routes_matrix_api.sh
src/: proxy.ts
src/app/: layout.tsx  page.tsx
src/app/events/: events-page.tsx  page.tsx  rideshare-multiplier-control.tsx
src/app/groups/: page.tsx
src/app/login/: page.tsx
src/app/teams/: page.tsx
src/app/test-api/: page.tsx
src/components/: address-selector-and-card.tsx  dialog-provider.tsx  query-provider.tsx  sign-in.tsx  sign-out.tsx
src/components/map/: event-locations-map.tsx  leaflet-map.tsx  map-container.tsx  mapbox-map.tsx
src/components/nav/: client-nav.tsx  nav.tsx
src/components/ui/: badges.tsx  button.tsx  dialog.tsx  input.tsx  segmented-button-group.tsx
src/db/: db.ts  intermediate-schema.ts  schema.ts
src/lib/: admin-solution-tools.md  auth-actions.ts  auth-client.ts  auth.ts  date-time.ts  excess_cars.md  feature-brand-copy.ts  group-invite.ts  itinerary.ts  preview-redirect.ts  python-client.ts  resend.ts  team-invite.ts
src/lib/events/: recurrence.ts
src/lib/geo/: client.ts  distances.ts  polyline.ts  random-points.ts  schema.ts  service.ts
src/lib/solver/: construct-problem.ts
src/lib/trip-solver/: construct-problem.ts
src/python-client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts  zod.gen.ts
src/python-client/client/: client.gen.ts
src/scripts/: dump-scale-problem.ts
src/scripts/smoke-tests/: test-compute-route.ts  test-google.ts  test-resend.ts  test-reverse-geocode.ts  test-route-matrix.ts  (+2 more)
src/solver/: BENCHMARK_RESULTS.md  HEURISTIC_BENCHMARK_RESULTS.md  app_infra.py  benchmark.py  benchmark_results.json  dump-scale-test.md  dump_openapi.py  models.py  openapi.json  pyproject.toml  server.py  solve.py  solver.py  test_server.py  test_solve_fixture_cuopt.py  test_solve_fixture_cuopt_150.py  test_solve_fixture_local.py  test_solve_fixture_remote.py
src/solver/groupthere_solver/: __init__.py  benchmark_runner.py  commute_solver.py  fastapi_utils.py  group_generator.py  heuristic_benchmark.py  milp.py  milp_cuopt.py  mock_problem.py  models.py  mojo_group_generator.py  shared_destination_solver.py  solution_builder.py  solve.py  subsets.py
src/solver/mojo_app/: group_gen.mojo  group_generator.mojo  group_generator_mojo.mojo  group_generator_mojo_python_interface.mojo  heap_permutation_iterator.mojo  heuristic_solver.mojo  pixi.toml
src/solver/tests/: test_group_generator.py  test_heuristic_solver.py  test_milp.py  test_solver.py  test_subsets.py
src/solver/tests/fixtures/: scale-problem-10.json  scale-problem-150.json  scale-problem.json  scale-solution.json
(+66 files in other folders)
