[project]
name = "solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "modal>=1.3.0.post1",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.7",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = "."
