[project]
name = "solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cuopt-stubs>=0.2.0",
    "fastapi[standard]>=0.128.0",
    "modal>=1.3.0.post1",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyomo>=6.8.3",
    "pyright>=1.1.407",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "uv>=0.8.19",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.pixi.workspace]
channels = ["https://conda.modular.com/max-nightly", "conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
coin-or-cbc = "2.10.*"
glpk = "5.*"
modular = ">=26.3.0.dev2026031405,<27"
python = "3.12.*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
mojo-build = { cmd = "mojo build mojo_app/group_generator_mojo_python_interface.mojo --emit shared-lib -o mojo_app/group_generator_mojo_python_interface.so", cwd = "." }
mojo-format = { cmd = "mojo format mojo_app/group_generator_mojo_python_interface.mojo mojo_app/group_gen.mojo", cwd = "." }
mojo-test-local = { cmd = "python -m test_solve_fixture_local", cwd = "." }
mojo-test-local-python = { cmd = "python -m test_solve_fixture_local -- --no-mojo", cwd = "." }
python-benchmark = { cmd = "modal run benchmark.py", cwd = "." }
python-deploy = { cmd = "modal deploy server.py", cwd = "." }
python-dev = { cmd = "modal serve server.py", cwd = "." }
python-dev-fastapi = { cmd = "uvicorn server:webapp --reload --port 8000", cwd = "." }
python-dev-fastapi-2 = { cmd = "fastapi run server.py --reload --port 8000", cwd = "." }
python-dump-openapi = { cmd = "python dump_openapi.py", cwd = "." }
python-format = { cmd = "ruff format --check .", cwd = "." }
python-format-fix = { cmd = "ruff format .", cwd = "." }
python-lint = { cmd = "ruff check .", cwd = "." }
python-test = { cmd = "pytest tests", cwd = "." }
python-test-fixture-cuopt = { cmd = "modal run test_solve_fixture_cuopt.py", cwd = "." }
python-test-fixture-local = { cmd = "python -m test_solve_fixture_local", cwd = "." }
python-test-fixture-remote = { cmd = "modal run test_solve_fixture_remote.py", cwd = "." }
python-test-server = { cmd = "modal run -m test_server", cwd = "." }
python-type-check = { cmd = "pyright", cwd = "." }
